cmake_minimum_required(VERSION 3.26)
set(PROJECTNAME "chiplusplus")
project(${PROJECTNAME} C CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

Set(FETCHCONTENT_QUIET FALSE)

add_subdirectory(vendors)
add_subdirectory(lib)
add_subdirectory(src)